@@ -24,6 +24,7 @@
 package com.sun.electric.tool.user.dialogs.options;
 
 import com.sun.electric.database.network.NetworkTool;
+import com.sun.electric.database.text.TextUtils;
 import com.sun.electric.tool.extract.Extract;
 
 import java.awt.Frame;
@@ -60,6 +61,8 @@ public class NetworkTab extends PreferencePanel
 
 		// node extraction
 		extractGridAlign.setSelected(Extract.isGridAlignExtraction());
+		extractUnifyNandP.setSelected(Extract.isUnifyActive());
+		extractSmallestPolygonSize.setText(Double.toString(Extract.getSmallestPolygonSize()));
 		extractCellPattern.setText(Extract.getCellExpandPattern());
 	}
 
@@ -71,6 +74,13 @@ public class NetworkTab extends PreferencePanel
 		nowBoolean = extractGridAlign.isSelected();
 		if (Extract.isGridAlignExtraction() != nowBoolean) Extract.setGridAlignExtraction(nowBoolean);
 
+		nowBoolean = extractUnifyNandP.isSelected();
+		if (Extract.isUnifyActive() != nowBoolean) Extract.setUnifyActive(nowBoolean);
+
+		double nowDouble = TextUtils.atof(extractSmallestPolygonSize.getText());
+		if (nowDouble != Extract.getSmallestPolygonSize())
+			Extract.setSmallestPolygonSize(nowDouble);
+
 		String nowString = extractCellPattern.getText();
 		if (!Extract.getCellExpandPattern().equals(nowString)) Extract.setCellExpandPattern(nowString);
 	}
@@ -81,8 +91,7 @@ public class NetworkTab extends PreferencePanel
 	 * always regenerated by the Form Editor.
 	 */
     // <editor-fold defaultstate="collapsed" desc=" Generated Code ">//GEN-BEGIN:initComponents
-    private void initComponents()
-    {
+    private void initComponents() {
         java.awt.GridBagConstraints gridBagConstraints;
 
         netDefaultOrder = new javax.swing.ButtonGroup();
@@ -95,15 +104,16 @@ public class NetworkTab extends PreferencePanel
         extractGridAlign = new javax.swing.JCheckBox();
         jLabel1 = new javax.swing.JLabel();
         extractCellPattern = new javax.swing.JTextField();
+        extractUnifyNandP = new javax.swing.JCheckBox();
+        jLabel3 = new javax.swing.JLabel();
+        extractSmallestPolygonSize = new javax.swing.JTextField();
 
         getContentPane().setLayout(new java.awt.GridBagLayout());
 
         setTitle("Tool Options");
         setName("");
-        addWindowListener(new java.awt.event.WindowAdapter()
-        {
-            public void windowClosing(java.awt.event.WindowEvent evt)
-            {
+        addWindowListener(new java.awt.event.WindowAdapter() {
+            public void windowClosing(java.awt.event.WindowEvent evt) {
                 closeDialog(evt);
             }
         });
@@ -163,18 +173,42 @@ public class NetworkTab extends PreferencePanel
         jLabel1.setText("Flatten cells whose names match this:");
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 1;
+        gridBagConstraints.gridy = 3;
         gridBagConstraints.gridwidth = 2;
         gridBagConstraints.insets = new java.awt.Insets(4, 4, 1, 4);
         jPanel3.add(jLabel1, gridBagConstraints);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
-        gridBagConstraints.gridy = 2;
+        gridBagConstraints.gridy = 4;
         gridBagConstraints.gridwidth = 2;
         gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
         gridBagConstraints.insets = new java.awt.Insets(1, 4, 4, 4);
         jPanel3.add(extractCellPattern, gridBagConstraints);
+
+        extractUnifyNandP.setText("Unify N and P active layers");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 0;
+        gridBagConstraints.gridy = 1;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
+        jPanel3.add(extractUnifyNandP, gridBagConstraints);
+
+        jLabel3.setText("Smallest extracted polygon (square units):");
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 0;
+        gridBagConstraints.gridy = 2;
+        gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
+        jPanel3.add(jLabel3, gridBagConstraints);
+
+        extractSmallestPolygonSize.setColumns(8);
+        gridBagConstraints = new java.awt.GridBagConstraints();
+        gridBagConstraints.gridx = 1;
+        gridBagConstraints.gridy = 2;
+        gridBagConstraints.fill = java.awt.GridBagConstraints.HORIZONTAL;
+        gridBagConstraints.insets = new java.awt.Insets(4, 4, 4, 4);
+        jPanel3.add(extractSmallestPolygonSize, gridBagConstraints);
 
         gridBagConstraints = new java.awt.GridBagConstraints();
         gridBagConstraints.gridx = 0;
@@ -197,7 +231,10 @@ public class NetworkTab extends PreferencePanel
     // Variables declaration - do not modify//GEN-BEGIN:variables
     private javax.swing.JTextField extractCellPattern;
     private javax.swing.JCheckBox extractGridAlign;
+    private javax.swing.JTextField extractSmallestPolygonSize;
+    private javax.swing.JCheckBox extractUnifyNandP;
     private javax.swing.JLabel jLabel1;
+    private javax.swing.JLabel jLabel3;
     private javax.swing.JPanel jPanel1;
     private javax.swing.JPanel jPanel3;
     private javax.swing.JRadioButton netAscending;
